指定版本号

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,36 @@
-aiohttp>=3
-jinja2>=2.9.0
-sockjs>=0.7.0,<0.10.0
-hoedown
-accept
-aioamqp
+accept==0.1.0
+aioamqp==0.13.0
+aiohttp==3.6.2
+aiohttp-sentry==0.6.0
+aiomongo==0.1
+# aiosmtplib==0.1.4
 git+https://github.com/LukeXuan/aiosmtplib # custom aiosmtlib with ssl support
-pytz
-coloredlogs
-httpagentparser
-geoip2
-GitPython
-PyYAML
-aiomongo
-yarl
-aiohttp-sentry
+async-timeout==3.0.1
+attrs==19.3.0
+certifi==2019.9.11
+chardet==3.0.4
+coloredlogs==10.0
+geoip2==2.9.0
+gitdb2==2.0.6
+GitPython==3.0.4
+hoedown==0.3.0
+httpagentparser==1.9.0
+humanfriendly==4.18
+idna==2.8
+idna-ssl==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+maxminddb==1.5.1
+multidict==4.5.2
+pamqp==2.3.0
+pymongo==3.4.0
+pytz==2019.3
+PyYAML==5.1.2
+raven==6.10.0
+raven-aiohttp==0.7.0
+requests==2.22.0
+smmap2==2.0.5
+sockjs==0.9.1
+typing-extensions==3.7.4.1
+urllib3==1.25.6
+yarl==1.3.0
